# computer_graphics_labs

./: CMakeLists.txt  main.cpp
assets/shaders/: simple.frag  simple.vert
